<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ThirdFragment">



    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="設定"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    <Button
            android:id="@+id/list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="予約投稿一覧へ"
            android:background="@drawable/bt_dialog_positive"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="484dp">

    </Button>
    <Button
            android:id="@+id/back_top_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="Top画面へ戻る"
            android:background="@drawable/bt_dialog_positive"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="532dp">

    </Button>

    <!--android:id="@+id/【つけたいid(名前)】"-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/content"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical" tools:layout_editor_absoluteY="0dp"
                  tools:layout_editor_absoluteX="0dp">

        <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_huge"
                android:gravity="center"
                android:background="@color/off_white"
                android:text="@string/Setting"
                android:textSize="@dimen/margin_large"
                android:textColor="@color/text_black"/>

        <Button
                android:id="@+id/Tutorialbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tutorial"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/notification_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notification_Setting"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/timezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Timezone"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/changeaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Account_change"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Help"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/Contact_Us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contact_Us"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/Terms_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Terms_service"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/Privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Privacy_policy"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:id="@+id/Display_CommercialCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Display_CommercialCode"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>