<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:background="#dfe"
              tools:context=".FirstFragment">

<!--入力箇所-->
    <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:layout_margin="50dp"
            android:textSize="30sp"
            android:background="#fff"

    />


    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/button_save"
                android:text="@string/save_file"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/button_read"
                android:text="@string/read_file"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

</LinearLayout>

    <TextView
            android:id="@+id/textview"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_margin="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="予約投稿画面"
            android:textSize="32sp"
     />

    <Button
            android:id="@+id/yoyakubutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="予約投稿する"
            android:textSize="18sp"
     />
    <Button
            android:id="@+id/toSecondButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2ndへ"
            android:textSize="18sp"
            />
        </LinearLayout>