<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

    <!-- コンテンツ -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="43dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:paddingBottom="20dp"
            android:background="@drawable/bg_dialog"
            android:gravity="center_horizontal"
            android:orientation="vertical"
    >

        <!-- タイトル -->
        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dialog_title"
                android:padding="10dp"
                android:text="Title"
                android:textSize="18sp"
                android:textColor="@android:color/white"
        />

        <!-- メッセージ -->
        <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/Post_to"
                android:textSize="36sp"
                android:textColor="#333333"
        />

        <!-- OK ボタン -->
        <Button
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/bt_dialog_positive"
                android:text="@string/Reservation_Post"
                android:textColor="@android:color/white"
        />
        <!-- 戻る ボタン -->
        <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/bt_dialog_positive"
                android:text="@string/back"
                android:textColor="@android:color/white"
        />
        <!--android:layout_constraintLeft_toRightOf="@+id/positive_button"-->

    </LinearLayout>

    <!-- Close ボタン -->
    <Button
            android:id="@+id/close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bt_dialog_close"
            android:text="×"
            android:textColor="#9acd32"
            android:layout_marginTop="40dp"
            android:layout_marginRight="9dp"/>

</RelativeLayout>